--- a/www/styles.css
+++ b/www/styles.css
@@ -17,7 +17,6 @@
     top: 30px;
     bottom:30px;
     right: 420px;
-    background-color: ghostwhite;
     padding: 20px; 
 }
 
@@ -39,7 +38,6 @@
     max-height: 60%;
     margin: 10px;
     border: 3px solid #333;
-    background-color: ghostwhite;
 }
 
 .video-item {
@@ -106,21 +104,24 @@
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     color: #FFFFFF;
-    background-color: #b5c6d0;
+    background-color:rgba(50, 14, 150, 0.849);
     text-align: center;
     transition: all 0.2s;
     width: 100%;
     height: 100%;
     border-radius: 1em;
 }
-
+.form-text {
+    margin-top: 0.25rem;
+    font-size: .875em;
+    color: #f8f9fa;
+}
 
 
 .flexbox-item {
     /* width: 200px; */
     margin: 10px;
     border: 1px solid #eee;
-    background-color: #dfdfdf;
 }
 
 .flexbox-item-1 {
@@ -137,8 +138,7 @@
 .controls {
     width: 100%;
     border: 1px solid #eee;
-    background-color: #dfdfdf;
-}
+    }
 
 
 
@@ -150,7 +150,10 @@ html {
   }
 
   body {
-    background: #eee;
+      background-image: url("looking-glass-logo.png");
+      background-repeat: no-repeat;
+    
+     /* background: #eee;*/
     font-family: 'helvetica neue';
     font-weight: 200;
     font-size: 20px;
